--- a/data/default.config
+++ b/data/default.config
@@ -12,5 +12,5 @@ Subtitles Format        :   srt
 ==================================
 [OPTION]
 Default Run             :   no
-Audio Process           :   no
+Audio Process           :   yes
 Ignore Processed Video  :   no
