--- a/data/default.config
+++ b/data/default.config
@@ -14,3 +14,4 @@ Subtitles Format        :   srt
 Default Run             :   no
 Audio Process           :   yes
 Ignore Processed Video  :   no
+Auto Translate          :   yes
