--- a/data/default.config
+++ b/data/default.config
@@ -1,7 +1,7 @@
 [ DO NOT DELETE THE LEFT COLUMN 
       SPACE MUST NOT CHANGE     ]
 ==============CONFIG==============
-Speed Language          :   ja-jp
+Speech Language         :   ja-jp
 SRC Language            :   ja
 Destination Language    :   vi
 Minimum Region Size     :   0.3
