--- a/data/default.config
+++ b/data/default.config
@@ -1,16 +1,17 @@
 [ DO NOT DELETE THE LEFT COLUMN 
-	  SPACE MUST NOT CHANGE     ]
+      SPACE MUST NOT CHANGE     ]
 ==============CONFIG==============
-Speed Language			:	ja-jp
-SRC Language			:	ja
-Destination Language	:	vi
-Minimum Region Size		:	0.3
-Maximum Region Size		:	5
-Max Continuous Silent	:	0.3
-Energy Threshold		:	2
-Subtitles Format		:	srt
+Speech Language         :   ja-jp
+SRC Language            :   ja
+Destination Language    :   vi
+Minimum Region Size     :   0.3
+Maximum Region Size     :   5
+Max Continuous Silent   :   0.3
+Energy Threshold        :   2
+Subtitles Format        :   srt
 ==================================
 [OPTION]
-Default Run				:	no
-Audio Process           :   no
-Ignore Processed Video	:	no
+Default Run             :   no
+Audio Process           :   yes
+Ignore Processed Video  :   no
+Auto Translate          :   yes
