--- a/data/default.config
+++ b/data/default.config
@@ -15,3 +15,4 @@ Default Run             :   no
 Audio Process           :   yes
 Ignore Processed Video  :   no
 Auto Translate          :   yes
+No Ask Option           :   no
